<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/Onboarding_Background_Color">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="273dp"
        android:layout_height="233dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="65dp"
        android:layout_height="60dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/inria_sans_bold"
        android:padding="5dp"
        android:text="@string/btnTxt1"
        android:textColor="#C33B1415"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#33000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="65dp"
        android:layout_height="60dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/inria_sans_bold"
        android:padding="5dp"
        android:text="@string/btnTxt2"
        android:textColor="#C33B1415"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="#33000000"
        app:strokeWidth="2dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="32dp"
        android:layout_height="12dp"
        android:layout_marginStart="152dp"
        android:layout_marginBottom="170dp"
        android:contentDescription="@string/line_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/line_shape" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="189dp"
        android:layout_marginBottom="170dp"
        android:contentDescription="@string/dot_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/dot_shape" />


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="206dp"
        android:layout_marginBottom="170dp"
        android:contentDescription="@string/dot_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/dot_shape" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="223dp"
        android:layout_marginBottom="170dp"
        android:contentDescription="@string/dot_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/dot_shape" />


</androidx.constraintlayout.widget.ConstraintLayout>