<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity6"
    android:background="@color/App_Background_Color">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/App_Background_Color"
        android:contentDescription="@string/btnTxt8" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/inria_sans_bold"
        android:text="@string/reg_txt1"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.779" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        style="@style/custom_card_view_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inria_sans_bold"
                android:text="@string/reg_login_txt"
                android:textColor="@color/App_Background_Color"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn12" />

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="Email or Username"
                android:background="@drawable/shape_rectangle"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="10dp"
                android:drawableTint="@color/App_Background_Color"
                android:ems="10"
                android:fontFamily="@font/inria_sans_bold"
                android:hint="@string/reg_txt5"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/App_Background_Color"
                android:textColorHint="@color/App_Background_Color_light2"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/reg_pw"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="Password"
                android:background="@drawable/shape_rectangle"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="10dp"
                android:drawableTint="@color/App_Background_Color"
                android:ems="10"
                android:fontFamily="@font/inria_sans_bold"
                android:hint="@string/reg_txt6"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/App_Background_Color"
                android:textColorHint="@color/App_Background_Color_light2"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_email" />

            <EditText
                android:id="@+id/reg_pw_cnf"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="Password"
                android:background="@drawable/shape_rectangle"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="10dp"
                android:drawableTint="@color/App_Background_Color"
                android:ems="10"
                android:fontFamily="@font/inria_sans_bold"
                android:hint="@string/reg_txt7"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/App_Background_Color"
                android:textColorHint="@color/App_Background_Color_light2"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_pw" />

            <Button
                android:id="@+id/btn12"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/App_Background_Color"
                android:fontFamily="@font/inria_sans_bold"
                android:text="@string/btnTxt7"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_tnc" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="135dp"
                android:clickable="true"
                android:contentDescription="@string/google_icon"
                android:focusable="true"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                app:srcCompat="@drawable/google" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="135dp"
                android:clickable="true"
                android:contentDescription="@string/facebook_icon"
                android:focusable="true"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                app:srcCompat="@drawable/facebook" />

            <TextView
                android:id="@+id/txt_tnc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inria_sans_bold"
                android:text="@string/reg_txt2"
                android:textColor="@color/App_Background_Color"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.342"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_pw_cnf" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip1"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginStart="16dp"
                app:chipBackgroundColor="@color/white"
                app:chipStrokeColor="@color/App_Background_Color"
                app:layout_constraintBottom_toTopOf="@+id/btn12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_pw_cnf" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="@font/inria_sans_bold"
                    android:text="@string/reg_txt3"
                    android:textColor="@color/homepage_text1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:fontFamily="@font/inria_sans_bold"
                    android:text="@string/reg_txt4"
                    android:textColor="@color/App_Background_Color"
                    android:textSize="18sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>